[shzeng] #2-flyway feat: use flyway to create table and insert data.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/spring_boot_demo
+    url: jdbc:mysql://localhost:3306/spring_boot_flyway
     username: root
     password: root
