[shzeng] #4-Spring Configuration feat: use Bean to bind config values and inject it with @Autowired.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,11 @@ greeting:
   name: Leo
   message: Hello
   info: ${greeting.message} from ${greeting.name}
+
+feature:
+  toggleOn: true
+  featureList:
+  - name: Sms
+    enabled: true
+  - name: Wechat
+    enabled: false
